; ModuleID = '/home/carl/AnghaBench/i3/src/extr_ewmh.c_ewmh_update_visible_name.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_ewmh.c_ewmh_update_visible_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@conn = common dso_local global i32 0, align 4
@XCB_PROP_MODE_REPLACE = common dso_local global i32 0, align 4
@A__NET_WM_VISIBLE_NAME = common dso_local global i32 0, align 4
@A_UTF8_STRING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ewmh_update_visible_name(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %7, label %17

7:                                                ; preds = %2
  %8 = load i32, i32* @conn, align 4
  %9 = load i32, i32* @XCB_PROP_MODE_REPLACE, align 4
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @A__NET_WM_VISIBLE_NAME, align 4
  %12 = load i32, i32* @A_UTF8_STRING, align 4
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @strlen(i8* %13)
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @xcb_change_property(i32 %8, i32 %9, i32 %10, i32 %11, i32 %12, i32 8, i32 %14, i8* %15)
  br label %22

17:                                               ; preds = %2
  %18 = load i32, i32* @conn, align 4
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* @A__NET_WM_VISIBLE_NAME, align 4
  %21 = call i32 @xcb_delete_property(i32 %18, i32 %19, i32 %20)
  br label %22

22:                                               ; preds = %17, %7
  ret void
}

declare dso_local i32 @xcb_change_property(i32, i32, i32, i32, i32, i32, i32, i8*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @xcb_delete_property(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
